--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==4.1.5
 pillow==10.4.0
 django-admin-sortable2==2.1.10
-django-tinymce-4.1.0
+django-tinymce
 environs==9.5.0
 requests==2.31.0
