--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==4.1.5
 pillow==10.4.0
 django-admin-sortable2==2.1.10
-django-tinymce
+django-tinymce==4.1.5
 environs==9.5.0
 requests==2.31.0
+django-debug-toolbar==4.2.0
